--- a/css/style-small.css
+++ b/css/style-small.css
@@ -17,10 +17,14 @@
        height: auto;
     }
   
-    .left img {
+    .left {
+       display: flex;
        width: 100%;
        height: 79px;
        justify-content: center;
+    }
+
+    .left img {
        padding: 30px; 
        flex-direction: column;
        align-items: center;  
@@ -36,8 +40,7 @@
        margin: 0;
        flex-direction: row;
        align-items: center;
-       padding-bottom: 5px;
-       border-bottom: #F2F2F2 2.7px solid;
+       border-bottom: #F2F2F2 2px solid;
        gap: 0;
     }
   
@@ -48,6 +51,7 @@
        align-items: center;
        padding-bottom: 15px;
        margin: 0;  
+       padding-top: 0;
     }
 
     /* right hover */
@@ -64,7 +68,7 @@
       border-bottom: solid 2px #0065FC;
       text-decoration: none;
       color: #0065FC;
-  }
+    }
 
     /* title */
     .title h1 {
@@ -113,7 +117,7 @@
        padding: 16px;
        background-color: #0065FC;
        color: #F2F2F2;
-       border-radius: 15px 15px 15px 15px;
+       border-radius: 15px;
     }
      
     /* filter */
@@ -207,7 +211,6 @@
     }
   /* ... */
     .hebergements-and-populaires {
-        flex-direction: column;
         padding: 0;
     }
 }
