--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,57 @@ body {
     width: 65%;
 }
 
+section .form {
+    display: flex;
+    flex-wrap : wrap;
+    flex-direction: row;
+    gap: 15px;
+    
+}
+
+.hebergements-cards {
+    display: flex;
+    flex-wrap : nowrap;
+    justify-content : space-between;
+}
+
+.hebergements-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.hebergements-cards .card {
+    display: flex;
+     flex-wrap : wrap;
+     justify-content : space-between;
+    margin-top: 33px;
+    height: 217px;
+    width: 250px;
+    align-items: center;  
+}
+
+.hebergements-cards img {
+    width: 100%;
+    height: 136px;
+    border-radius: 20px 20px 0px 0px;  
+}
+
+.hebergements-cards .card-content {
+    width: 100%;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-sizing: border-box;  
+}
+
+.hebergements-cards .card-title {
+    margin-top: 10px;
+    margin-bottom: 4px;
+}
+
+
 /****** Populaires ***********/
 .populaires {
     width: 32%;
