--- a/css/style-medium.css
+++ b/css/style-medium.css
@@ -3,12 +3,16 @@
 @media screen and (max-width: 1280px) {
 
      /* nav */
+     .main-container-nav {
+          width: 100%;
+          height: auto;
+     }
+
      .right {
           display: flex;
           width: 244px;
           height: 35px;
-          padding-left: 50px; 
-          padding-right: 50px; 
+          padding: 0 50px; 
           flex-direction: row; 
           justify-content: space-around;
           margin-bottom: 45px;
@@ -20,7 +24,7 @@
           width: auto;
           height: 49px;
           background-color: #F2F2F2;
-          border-radius: 15px 0px 0px 15px;
+          border-radius: 15px 0 0 15px;
           color: #000000;
           display: flex;
           padding-left: 20px;
@@ -80,39 +84,71 @@
      }
      
      .icones h3 {
-         width: 90%;
-         font-size: 16px;
+        width: 90%;
+        font-size: 16px;
      }
     
      /* main */
     .hebergements-and-populaires {
          flex-direction: column;
-    }
+         height: auto;
+     }
 
     .hebergements {
          width: 100%;
-    }
+         height: auto;
+     }
+    
+     .hebergements-cards {
+         display: flex;
+         flex-wrap: wrap;
+         justify-content: space-between;
+         gap: 20px;
+     }
+     
+     .hebergements-cards .card {
+          width: 100%;
+          max-width: 350px;
+     }
+ 
+    .hebergements-cards .form-1 {
+          width: 100%;
+          max-height: 192px;
+          display: flex;
+          flex-grow: 1;
+          flex-direction: row;
+     }
+
+    .form-container {
+         flex-grow: 1;
+         width: 100%;
+         height: auto;
+     }
 
     .populaires {
          width: 100%;
+         height: auto;
          margin-top: 50px;
-    }
+     }
 
     .populaires-cards {
+         height: auto;
          display: flex;
          flex-direction: row;
-         justify-content: space-between;
-    }
+         width: 100%;
+         gap: 20px; 
+     }
 
     .populaires-cards .card {
-         width: 30%;
-    }
+         width: 100%;
+         justify-content: space-between
+     }
 
     .populaires-cards .card-title {
          font-size: 14px;
-    }
+     }
 
     .populaires-cards .card-subtitle {
          font-size: 13px;
-    }
+     }
 }
