--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ html {
 
 /* nav bar */
 .main-container-nav {
-    width: 100%;
+    width: 1440px;
 }
 
 nav {
@@ -37,6 +37,7 @@ nav {
 	top: 0;
     overflow: hidden;
     background-color: white;
+    z-index: 1000;
 }
 
 .left {
@@ -157,6 +158,15 @@ nav {
     margin-top: 35px;
 }
 
+.filter {
+    margin-right: 15px;
+    overflow: hidden;
+}
+
+.icones h3 {
+    font-size: 1.2em;
+}
+
 .icones ul {
     display: flex;
     flex-direction: row;
@@ -185,14 +195,6 @@ nav {
 li i {
     font-size: 20px;
     padding-right: 15px;
-}
-
-.icones h3 {
-    font-size: 1.2em;
-}
-
-.filter {
-    margin-right: 15px;
 }
 
 /* information */
@@ -262,11 +264,13 @@ body {
     color: var(--main-bg-color)
 }
 
-/****** Hebergements And Populaires ***********/
+/* Hebergements And Populaires */
 .hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
     padding: 0 50px; 
+    height: 611px;
+    overflow: hidden;
 }
 
 .hebergements-and-populaires section {
@@ -274,25 +278,28 @@ body {
     border-radius: 15px;
     padding: 30px;
     box-sizing: border-box;
+    height: auto;
 }
 
-/****** Hebergements ***********/
+/* Hebergements */
 .hebergements {
     width: 65%;
 }
 
-section .form {
+.form-1 {
     display: flex;
-    flex-wrap : wrap;
     flex-direction: row;
-    gap: 15px;
-    
+    flex-wrap : nowrap;
+    justify-content: space-around;
+    height: auto;
 }
 
-.hebergements-cards {
+.form-2 {
     display: flex;
+    flex-direction: row;
     flex-wrap : nowrap;
-    justify-content : space-between;
+    justify-content: space-around;
+    height: auto;
 }
 
 .hebergements-title {
@@ -301,38 +308,85 @@ section .form {
     align-items: center;
 }
 
+.hebergements-cards {
+    position: auto;
+    max-width: 100%;
+    height: auto;
+  }
+
+.form-1 .hebergements-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap : nowrap;
+    max-width: 100%;
+    height: auto;  
+    gap: 30px;
+    margin-top: 30px;
+}
+
+.form-2 .hebergements-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap : nowrap;
+    max-width: 100%;
+    height: auto;  
+    gap: 30px;
+    margin-top: 30px;
+}
+
 .hebergements-cards .card {
     display: flex;
-     flex-wrap : wrap;
-     justify-content : space-between;
-    margin-top: 33px;
-    height: 217px;
+    flex-wrap : wrap;
+    height: auto;
     width: 250px;
-    align-items: center;  
+    align-items: center;
+    padding-bottom: 15px;  
 }
 
 .hebergements-cards img {
     width: 100%;
-    height: 136px;
-    border-radius: 20px 20px 0px 0px;  
+    height: 114px;
+    border-radius: 20px 20px 0px 0px; 
+    padding-bottom: 9px; 
 }
 
 .hebergements-cards .card-content {
     width: 100%;
-    padding-left: 10px;
+    height: 63px;
+    padding: 0 15px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     box-sizing: border-box;  
 }
 
-.hebergements-cards .card-title {
-    margin-top: 10px;
-    margin-bottom: 4px;
+.hebergements-cards .card-subtitle {
+    display: flex;
+    flex-direction: row;
+    padding: 8px 0;
+    font-size: 14px;
+    font-weight: 400;
 }
 
+.section-title {
+    font-size: 22px;
+    font-weight: 700;
+}
 
-/****** Populaires ***********/
+.section-more-title {
+    display: flex;   
+    margin-top: 30px;
+    height: 21px;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+.section-more-title:hover {
+    cursor: pointer;
+    text-decoration: none;
+}
+
+/* Populaires  */
 .populaires {
     width: 32%;
 }
@@ -343,13 +397,24 @@ section .form {
     align-items: center;
 }
 
+.populaires-cards {
+    width: 100%;
+    height: 492px;
+}
+
 .populaires-cards .card {
     display: flex;
     margin-top: 33px;
 }
 
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
 .populaires-cards img {
-    width: 33%;
+    width: 32%;
     height: 136px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
