--- a/css/style.css
+++ b/css/style.css
@@ -441,3 +441,59 @@ body {
 .populaires-cards .card-rating {
     margin-bottom: 5px;
 }
+
+/* section activites */
+.activites  {
+    margin: 35px 50px;
+    padding: 30px;
+    max-width: 1280px;
+}
+
+.activites .title {
+    font-size: 16px;
+    font-family: Raleway;
+    padding: 0 0 30px 0;
+}
+
+.card-activites {
+    display: flex;
+    align-self: stretch;
+    justify-content: space-between;
+    gap: 30px;
+    width: auto;
+    
+}
+
+.card-body {
+    width: 30%; 
+    max-width: 297px;
+    height: 439px; 
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.10); 
+    border-radius: 20px;  
+    justify-content: space-between;
+}
+
+.card-body:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+.card-body img{
+    width: 297px;
+    height: 380px;
+    border-top-left-radius: 20px; 
+    border-top-right-radius: 20px;
+    box-sizing: border-box;
+    margin-bottom: -5px;
+    background-position: center;
+    box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.10);
+}
+
+.card-body h3 {
+    padding: 20px;
+    box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.10);
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    margin-top: -5px;
+}
