--- a/css/style.css
+++ b/css/style.css
@@ -287,15 +287,7 @@ body {
     width: 65%;
 }
 
-.form-1 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap : nowrap;
-    justify-content: space-around;
-    height: auto;
-}
-
-.form-2 {
+.form-1, .form-2 {
     display: flex;
     flex-direction: row;
     flex-wrap : nowrap;
@@ -489,5 +481,6 @@ body {
     box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.10);
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    margin-top: -5px;
+    margin-top: -2px;
+    font-size: 16px;
 }
